_sass/_base.scss
/* ... */
.unloaded {
  display: none !important;
}

.medium-zoom-overlay,
.medium-zoom-image--opened {
  z-index: 999;
}

#toc-sidebar {
  z-index: 1;
}

.echarts {
  height: 400px;
  width: 100%;
}

.map {
  height: 400px;
  width: 100%;
}

swiper-container {
  --swiper-navigation-color: var(--global-theme-color);
  --swiper-pagination-color: var(--global-theme-color);
  --swiper-pagination-bullet-inactive-color: var(--global-text-color);
}

.ps-root {
  .ps-algorithm {
    margin: 0.8em 0;
    border-top: 3px solid var(--global-text-color);
    border-bottom: 2px solid var(--global-text-color);
  }

  .ps-algorithm.with-caption > .ps-line:first-child {
    border-bottom: 2px solid var(--global-text-color);
  }
}

// Ninja Keys
// for more options, check https://github.com/ssleptsov/ninja-keys?tab=readme-ov-file#css-variables
ninja-keys {
  --ninja-accent-color: var(--global-theme-color);
  --ninja-icon-size: 0px;
  --ninja-modal-background: var(--global-bg-color);
  --ninja-z-index: 1031;
}

ninja-keys::part(ninja-input) {
  color: var(--ninja-selected-text-color);
}

ninja-keys::part(ninja-input-wrapper) {
  background: var(--global-bg-color);
}

// newsletter
.newsletter-form-container {
  margin-bottom: 20px;
}

.newsletter-form {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
}

.newsletter-form-input,
.bibsearch-form-input {
  color: var(--global-newsletter-text-color);
  background: var(--global-newsletter-bg-color);
  border: 1px solid var(--global-newsletter-text-color);
  outline: none;
  margin: 0px 10px 0px 0px;
  width: 100%;
  max-width: 350px;
  min-width: 100px;
  box-sizing: border-box;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px;
  border-radius: 6px;
  padding: 8px 12px;
}

.newsletter-form-input:focus {
  border-color: var(--global-theme-color) !important;
}

.newsletter-form-button {
  background: var(--global-theme-color);
  color: var(--global-bg-color);
  display: flex;
  width: min-content;
  max-width: 200px;
  white-space: nowrap;
  height: 38px;
  align-items: center;
  flex-direction: row;
  padding: 9px 17px;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px;
  border-radius: 6px;
  text-align: center;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  border: none;
  cursor: pointer;
}

.newsletter-loading-button {
  background: var(--global-theme-color);
  color: var(--global-bg-color);
  display: none;
  width: min-content;
  max-width: 300px;
  white-space: nowrap;
  height: 38px;
  align-items: center;
  flex-direction: row;
  padding: 9px 17px;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px;
  border-radius: 6px;
  text-align: center;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  border: none;
  cursor: pointer;
  margin-right: 20px;
}

.newsletter-success {
  color: var(--global-text-color);
  display: none;
  align-items: center;
  width: 100%;
}

.newsletter-error {
  color: var(--global-theme-color);
  display: none;
  align-items: center;
  width: 100%;
}

.newsletter-back-button {
  color: var(--global-theme-color);
  margin: 10px auto;
  text-align: center;
  display: none;
  background: transparent;
  border: none;
  cursor: pointer;
}

@media (max-width: 575px) {
  .newsletter-form-input,
  .newsletter-form-button,
  .newsletter-loading-button,
  .newsletter-success,
  .newsletter-error {
    font-size: 16px !important;
  }
  .newsletter-form-container {
    margin-right: 20px;
    margin-left: 20px;
  }
}

// popover is used for annotation in bib.liquid
.popover {
  background-color: var(--global-bg-color);
  border-color: var(--global-divider-color);

  .popover-header {
    color: var(--global-text-color); // Header text color
    border-bottom: 1px solid var(--global-divider-color);
  }

  .popover-body {
    color: var(--global-text-color); // Body text color
  }
}

.bs-popover-top {
  // arrow fill color
  .arrow::after {
    border-top-color: var(--global-bg-color);
  }

  // arrow border color
  .arrow:before {
    border-top-color: var(--global-divider-color);
  }
}

.bs-popover-bottom {
  // arrow fill color
  .arrow::after {
    border-bottom-color: var(--global-bg-color);
  }

  // arrow border color
  .arrow:before {
    border-bottom-color: var(--global-divider-color);
  }
}

// highlight-search-term
::highlight(search) {
  background-color: var(--global-theme-color);
  color: var(--global-text-color);
}

